# DBP

./: CMakeLists.txt  README.md
analysis/: target-tracking.ipynb
controllers/: CMakeLists.txt
controllers/footbot_flocking/: CMakeLists.txt  footbot_flocking.cpp  footbot_flocking.h
controllers/footbot_flocking_OSP_IC/: CMakeLists.txt  footbot_flocking_OSP_IC.cpp  footbot_flocking_OSP_IC.h  message_manager.cpp  message_manager.h
controllers/footbot_flocking_OSP_byzantine/: CMakeLists.txt  footbot_flocking_OSP_byzantine.cpp  footbot_flocking_OSP_byzantine.h
controllers/footbot_flocking_WMSR/: CMakeLists.txt  footbot_flocking_WMSR.cpp  footbot_flocking_WMSR.h
controllers/footbot_flocking_byzantine/: CMakeLists.txt  footbot_flocking_byzantine.cpp  footbot_flocking_byzantine.h
controllers/footbot_localization_OSP/: CMakeLists.txt  footbot_localization_OSP.cpp  footbot_localization_OSP.h  message_manager.cpp  message_manager.h
controllers/footbot_target/: CMakeLists.txt  footbot_target.cpp  footbot_target.h
controllers/footbot_time_sync_OSP/: CMakeLists.txt  footbot_time_sync_OSP.cpp  footbot_time_sync_OSP.h  message_manager.cpp  message_manager.h
controllers/footbot_time_sync_WMSR/: CMakeLists.txt  footbot_time_sync_WMSR.cpp  footbot_time_sync_WMSR.h
controllers/utility/: CMakeLists.txt  OSP_messages.h
experiments/DBP_flocking/: flocking_negative-obs.argos  flocking_positive-obs-fixed.argos  flocking_positive-obs.argos
experiments/DBP_localization/: localization.argos  localization_no-mitigation.argos
experiments/DBP_time_sync/: time_sync.argos
experiments/WMSR_flocking/: flocking_WMSR.argos  flocking_WMSR_smallF.argos
experiments/WMSR_time_sync/: time_sync.argos  time_sync_smallF.argos
loop_functions/: CMakeLists.txt
loop_functions/byzantine_flocking_WMSR_loop_functions/: CMakeLists.txt  byzantine_flocking_loop_functions.cpp  byzantine_flocking_loop_functions.h
loop_functions/byzantine_flocking_loop_functions/: CMakeLists.txt  byzantine_flocking_loop_functions.cpp  byzantine_flocking_loop_functions.h
loop_functions/byzantine_localization_loop_functions/: CMakeLists.txt  byzantine_localization_loop_functions.cpp
loop_functions/byzantine_time_sync_loop_functions/: CMakeLists.txt  byzantine_time_sync_loop_functions.cpp  byzantine_time_sync_loop_functions.h
loop_functions/flocking_loop_functions/: CMakeLists.txt  flocking_qtuser_functions.cpp  flocking_qtuser_functions.h
loop_functions/id_loop_functions/: CMakeLists.txt  id_loop_functions.cpp  id_loop_functions.h
plugins/: CMakeLists.txt
plugins/robots/: CMakeLists.txt
plugins/robots/foot-bot-networked/: CMakeLists.txt
plugins/robots/foot-bot-networked/simulator/: dynamics2d_footbot_model.cpp  dynamics2d_footbot_model.h  footbot_base_ground_rotzonly_sensor.h  footbot_distance_scanner_default_actuator.h  footbot_distance_scanner_rotzonly_sensor.h  footbot_entity.cpp  footbot_entity.h  footbot_gripper_default_actuator.h  footbot_light_rotzonly_sensor.h  footbot_motor_ground_rotzonly_sensor.h  footbot_proximity_default_sensor.h  footbot_turret_default_actuator.h  footbot_turret_encoder_default_sensor.h  pointmass3d_footbot_model.cpp  pointmass3d_footbot_model.h  qtopengl_footbot.cpp  qtopengl_footbot.h
