add_library(footbot_flocking_OSP_byzantine MODULE ../utility/OSP_messages.h footbot_flocking_OSP_byzantine.h footbot_flocking_OSP_byzantine.cpp)
target_link_libraries(footbot_flocking_OSP_byzantine
  argos3core_simulator
  argos3plugin_simulator_footbotnetworked
  argos3plugin_simulator_genericrobot)
